[project]
name = "simulacra"
version = "2.56.0"
requires-python = "~=3.13.0"
dependencies = [
    "openai",
    "pytz",
    "pyyaml",
    "python-telegram-bot",
    "ruamel.yaml",
    "toml",
    "jinja2",
    "httpx",
    "pdfplumber",
    "backoff",
    "rapidfuzz",
    "dotenv",
    "aiofiles",
    "trafilatura",
    "curl_cffi",
]

[dependency-groups]
dev = [
    "ruff",
    "hupper",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pyfakefs",
    "pytest-httpx",
    "pytest-cov",
    "mypy",
    "types-pyyaml",
    "types-pytz",
    "types-toml",
    "types-aiofiles",
    "genbadge[coverage]",
]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "RUF",   # ruff-specific rules
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "RET",   # flake8-return
    "TC",    # flake8-type-checking
    "ARG",   # flake8-unused-arguments
]

# https://github.com/pytest-dev/pytest-asyncio/issues/924
[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
addopts = "--cov=src"
